--- a/ONBUILD/test/index.html
+++ b/ONBUILD/test/index.html
@@ -1,1 +1,9 @@
-<h1> Hello : This is NNarendra </h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My First Page</title>
+</head>
+<body>
+  <h1>Hello, World!</h1>
+</body>
+</html>
